--- a/src/BddBundle/Resources/views/Coaster/image-upload.html.twig
+++ b/src/BddBundle/Resources/views/Coaster/image-upload.html.twig
@@ -39,6 +39,9 @@
       </div>
       <div class="form-group">
         {{ form_widget(form.upload, {'attr': {'class': 'btn btn-primary'}}) }}
+        <a href="{{ path('bdd_show_coaster', {'slug': coaster.slug}) }}" class="btn btn-warning">
+          {{ 'image_upload.form.back'|trans }}
+        </a>
       </div>
       {{ form_rest(form) }}
       {{ form_end(form) }}
