add manufacturer stat

--- a/src/BddBundle/Resources/views/Profile/user_stats.html.twig
+++ b/src/BddBundle/Resources/views/Profile/user_stats.html.twig
@@ -1,79 +1,87 @@
 {% if stats|length > 0 %}
-<div class="panel">
-  <div class="panel-heading">
-    <h3 class="panel-title">{{ 'me.stats'|trans }}</h3>
+  <div class="panel">
+    <div class="panel-heading">
+      <h3 class="panel-title">{{ 'me.stats.title'|trans }}</h3>
+    </div>
+    <div class="panel-body">
+      <div class="col-sm-6 col-md-4">
+        <div class="panel panel-body panel-body-accent">
+          <div class="media no-margin">
+            <div class="media-left media-middle">
+              <i class="icon-shield-check icon-3x text-success-400"></i>
+            </div>
+            <div class="media-body text-right">
+              <h3 class="no-margin text-semibold">{{ stats.nb_coasters }}</h3>
+              <span class="text-uppercase text-size-mini text-muted">{{ 'me.stats.coasters'|trans }}</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4">
+        <div class="panel panel-body panel-body-accent">
+          <div class="media no-margin">
+            <div class="media-left media-middle">
+              <i class="icon-location3 icon-3x text-blue-400"></i>
+            </div>
+            <div class="media-body text-right">
+              <h3 class="no-margin text-semibold">{{ stats.nb_park }}</h3>
+              <span class="text-uppercase text-size-mini text-muted">{{ 'me.stats.parks'|trans }}</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4">
+        <div class="panel panel-body panel-body-accent">
+          <div class="media no-margin">
+            <div class="media-left media-middle">
+              <i class="icon-city icon-3x text-indigo-400"></i>
+            </div>
+            <div class="media-body text-right">
+              <h3 class="no-margin text-semibold">{{ stats.nb_country }}</h3>
+              <span class="text-uppercase text-size-mini text-muted">{{ 'me.stats.countries'|trans }}</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4">
+        <div class="panel panel-body panel-body-accent">
+          <div class="media no-margin">
+            <div class="media-left media-middle">
+              <i class="icon-earth icon-3x text-warning-400"></i>
+            </div>
+            <div class="media-body text-right">
+              <h3 class="no-margin text-semibold">{{ stats.country.name|trans([], 'database') }}</h3>
+              <span class="text-uppercase text-size-mini text-muted">{{ 'me.stats.most_country'|trans }}</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4">
+        <div class="panel panel-body panel-body-accent">
+          <div class="media no-margin">
+            <div class="media-left media-middle">
+              <i class="icon-trophy2 icon-3x text-teal-400"></i>
+            </div>
+            <div class="media-body text-right">
+              <h3 class="no-margin text-semibold">{{ stats.top_100 }}</h3>
+              <span class="text-uppercase text-size-mini text-muted">{{ 'me.stats.top_100'|trans }}</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4">
+        <div class="panel panel-body panel-body-accent">
+          <div class="media no-margin">
+            <div class="media-left media-middle">
+              <i class="icon-design icon-3x text-danger-400"></i>
+            </div>
+            <div class="media-body text-right">
+              <h3 class="no-margin text-semibold">{{ stats.manufacturer.name }} ({{ stats.manufacturer.nb }})</h3>
+              <span class="text-uppercase text-size-mini text-muted">{{ 'me.stats.manufacturer'|trans }}</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="panel-body">
-    <div class="col-sm-6 col-md-4">
-      <div class="panel panel-body panel-body-accent">
-        <div class="media no-margin">
-          <div class="media-left media-middle">
-            <i class="icon-shield-check icon-3x text-success-400"></i>
-          </div>
-
-          <div class="media-body text-right">
-            <h3 class="no-margin text-semibold">{{ stats.nb_coasters }}</h3>
-            <span class="text-uppercase text-size-mini text-muted">coasters</span>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6 col-md-4">
-      <div class="panel panel-body panel-body-accent">
-        <div class="media no-margin">
-          <div class="media-left media-middle">
-            <i class="icon-location3 icon-3x text-blue-400"></i>
-          </div>
-
-          <div class="media-body text-right">
-            <h3 class="no-margin text-semibold">{{ stats.nb_park }}</h3>
-            <span class="text-uppercase text-size-mini text-muted">parks</span>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6 col-md-4">
-      <div class="panel panel-body panel-body-accent">
-        <div class="media no-margin">
-          <div class="media-left media-middle">
-            <i class="icon-city icon-3x text-indigo-400"></i>
-          </div>
-
-          <div class="media-body text-right">
-            <h3 class="no-margin text-semibold">{{ stats.nb_country }}</h3>
-            <span class="text-uppercase text-size-mini text-muted">countries</span>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6 col-md-4">
-      <div class="panel panel-body panel-body-accent">
-        <div class="media no-margin">
-          <div class="media-left media-middle">
-            <i class="icon-earth icon-3x text-warning-400"></i>
-          </div>
-
-          <div class="media-body text-right">
-            <h3 class="no-margin text-semibold">{{ stats.country.name|trans([], 'database') }}</h3>
-            <span class="text-uppercase text-size-mini text-muted">Most ridden in</span>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6 col-md-4">
-      <div class="panel panel-body panel-body-accent">
-        <div class="media no-margin">
-          <div class="media-left media-middle">
-            <i class="icon-trophy2 icon-3x text-teal-400"></i>
-          </div>
-
-          <div class="media-body text-right">
-            <h3 class="no-margin text-semibold">{{ stats.top_100 }}</h3>
-            <span class="text-uppercase text-size-mini text-muted">Ridden in Top 100</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 {% endif %}
